<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.bantuan.BantuanUserActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="Bantuan" />

    <!-- ScrollView for content -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/teks1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bantuan_cara_penggunaan_aplikasi"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <!-- Card for Diagnosa Menu -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/diagnosis"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/teks2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/img1"
                        android:layout_alignTop="@id/img1"
                        android:gravity="center_vertical"
                        android:text="@string/bantuan"
                        android:textSize="16sp" />

                    <!-- Judul untuk Diagnosa -->
                    <TextView
                        android:id="@+id/judul_diagnosa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/teks2"
                        android:layout_toEndOf="@id/img1"
                        android:text="@string/menu_diagnosa"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card for Daftar Penyakit -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/checklist"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/teks3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/img2"
                        android:layout_alignTop="@id/img2"
                        android:gravity="center_vertical"
                        android:text="@string/bantuan2"
                        android:textSize="16sp" />

                    <!-- Judul untuk Daftar Penyakit -->
                    <TextView
                        android:id="@+id/judul_penyakit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/teks3"
                        android:layout_toEndOf="@id/img2"
                        android:text="@string/menu_daftar_penyakit"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card for Riwayat Diagnosa -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/health_report"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/teks4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/img3"
                        android:layout_alignTop="@id/img3"
                        android:gravity="center_vertical"
                        android:text="@string/bantuan3"
                        android:textSize="16sp" />

                    <!-- Judul untuk Riwayat Diagnosa -->
                    <TextView
                        android:id="@+id/judul_riwayat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/teks4"
                        android:layout_toEndOf="@id/img3"
                        android:text="@string/menu_riwayat_diagnosa"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card for About Menu -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/img4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/info"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/teks5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/img4"
                        android:layout_alignTop="@id/img4"
                        android:gravity="center_vertical"
                        android:text="@string/bantuan4"
                        android:textSize="16sp" />

                    <!-- Judul untuk About -->
                    <TextView
                        android:id="@+id/judul_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/teks5"
                        android:layout_toEndOf="@id/img4"
                        android:text="@string/menu_about"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
